<resources>
    <string name="app_name">ProGym</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="fitness_center">FITNESS CENTER</string>
    <string name="progym">PROGYM</string>
    <string name="loginimage">loginImage</string>
    <string name="exercise">Exercise</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="schedule">Schedule</string>
    <string name="diet_plans">Diet plans</string>
    <string name="payment">Payment</string>
    <string name="contact_us">Contact Us</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_sub_title">Enter Sub Title</string>
    <string name="enter_description">Enter Description</string>
    <string name="title">Title</string>
    <string name="sub_title">Sub Title</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="upload">Upload</string>
    <string name="exercise_image">exercise image</string>
    <string name="add_schedule">Add Schedule</string>


    <string name="tv_name">Name With Initials</string>
    <string name="tv_gender">Gender</string>
    <string name="rdbtn_male">Male</string>
    <string name="rdbtn_female">Female</string>
    <string name="tv_age">Age</string>
    <string name="tv_address">Address</string>
    <string name="tv_phone">Phone Number</string>
    <string name="tv_email">Email</string>
    <string name="et_email">abc@gmail.com</string>
    <string name="tv_nic">NIC</string>
    <string name="tv_membertype">Membership Type</string>
    <string name="tv_username">Username</string>
    <string name="tv_password">Password</string>
    <string name="btn_addmember">Add Member</string>
    <string name="btn_updatemember">Update</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_addnewmem">Add New Member</string>
    <string name="tv_height">Height</string>
    <string name="tv_build">Build Yourself !</string>
    <string name="height_txt">0cm</string>
    <string name="rdbtn_little">Little or No Exercise</string>
    <string name="rdbtn_light">Light Exercise(1-3 days per week)</string>
    <string name="rdbtn_mod">Moderate Exercises(3-5 days per week)</string>
    <string name="rdbtn_active">Active(6-7 days per week)</string>
    <string name="rdbtn_extra">Extra Active/Physically Demanding Job</string>
    <string name="btn_profile"><![CDATA[Save & View]]></string>
    <string name="tv_weight">Weight(kg)</string>
    <string name="weight_text">50</string>
    <string name="age_text">18</string>
    <string name="tv_exercise">How Often Do You Exercise ?</string>
    <string name="tv_result">Your Fitness Analysis</string>
    <string name="btn_ok">OK</string>
    <string name="tv_paymethod">Payment Method</string>
    <string name="tv_cno">Card Number</string>
    <string name="tv_cname">Card Holder\'s Name</string>
    <string name="tv_expdate">Expiry Date</string>
    <string name="tv_cvv">CVV</string>
    <string name="tv_secure">Payment Details are Secured</string>
    <string name="name">Name</string>
    <string name="et_cno">1234567890123456</string>
    <string name="et_expdate">12/22</string>
    <string name="et_cvv">122</string>
    <string name="btn_proceed">Save</string>
    <string name="btn_paynow">Pay Now</string>
    <string name="btn_addcard">Add New Card</string>
    <string name="btn_viewcard">View Cards</string>
    <string name="btn_history">Transaction History</string>
    <string name="et_amount">Amount</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_continue">Continue with Existing Card</string>
    <string name="btn_edit">Edit</string>

    <string name="exercise_managment">Exercise Managment</string>

    <string-array name="Membership">
        <item>Permanent</item>
        <item>Open</item>
        <item>Term</item>
    </string-array>

    <string-array name="exercise_type">
        <item>Weight Lose</item>
        <item>Bodybuilding</item>
        <item>Body Shaping</item>
    </string-array>


    <string name="rdbtn_visa">Visa</string>
    <string name="rdbtn_discover">Discover</string>
    <string name="rdbtn_master">Master</string>
    <string name="rdtbn_amex">Amex</string>
    <string name="rdbtn_paypal">Paypal</string>

    <string name="add_to_cart">Add</string>
    <string name="buy_now">buy</string>
    <string name="go_to_cart">View Cart</string>
    <string name="cart_go">cart</string>
    <string name="tot_price">Sub Total: LKR  </string>
    <string name="sub_total" />
    <string name="go_checkout_btn">Checkout</string>
    <string name="pay_btn">pay</string>
    <string name="total_amount">"Total Amount :  LKR  "</string>
    <string name="checkout_item">ITEM</string>
    <string name="checkout_price">PRICE</string>
    <string name="add_item_title">Title</string>
    <string name="add_item_code">Item Code</string>
    <string name="add_item_description">Description</string>
    <string name="add_item_price">Price</string>
    <string name="add_item_image">Image</string>
    <string name="add_item">Add Item</string>
    <string name="update_item">Update Item</string>

    <string name="main_topic_item">Add Items</string>
    <string name="item_price_txt">Price</string>
    <string name="item_topic_txt">Item Name</string>
    <string name="item_description_txt">Description</string>

    <string name="item_image_btn">Upload</string>
    <string name="add_item_btn">Add Item</string>
    <string name="item_img">item image</string>
    <string name="main_topic_item_update">Update Item</string>
    <string name="updateitem_image_btn">Upload</string>
    <string name="update_item_btn">Update Item</string>
    <string name="main_topic_item_add">Add Item</string>
    <string name="delete">Delete</string>
    <string name="update_or_delete_exercise">Update or Delete Exercise</string>

    <string name="update">Update</string>
    <string name="monday">Monday</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="thursday">Thursday</string>
    <string name="sunday">Sunday</string>

    <string name="tv_addCard">Add New Card</string>

    <string name="add_item_price_txt">Item Price</string>
    <string name="update_item_price_txt">Price</string>

    <string name="tv_allMembers">All Members</string>
    <string name="btn_cal">Fitness Analysis</string>
    <string name="exercise_id">Exercise ID</string>
    <string name="enter_exercise_id">Enter Exercise ID</string>
    <string name="delete_item_btn">Add Item</string>
    <string name="topic_delete">Store Management</string>
    <string name="btn_delete">Delete</string>

    <string name="textview">TextView</string>
    <string name="events">Events</string>
    <string name="home">Home</string>
    <string name="upload_image">Upload Image</string>
    <string name="item_update_delete_main_topic">Update and Delete an Item</string>
    <string name="item_update_delete_title_txt">Enter Price</string>
    <string name="textView30">LKR.</string>
    <string name="buyNow">Buy now</string>
    <string name="add_to_cart_user">Add to cart</string>

    <string name="shippingTXT">Shipping Fee</string>
    <string name="checkouttopic">Checkout</string>
    <string name="textViewLKR">"LKR.  "</string>
    <string name="textView31LKR">"LKR.  "</string>
    <string name="item_price_hint">Item Price</string>
    <string name="updtpricehint">Item Price</string>

    <string name="todo">TODO</string>
    <string name="hey_welcome">Hey Welcome,</string>
    <string name="start_at_home">Start At Home</string>
    <string name="see_all">See All</string>
    <string name="what_s_new">What\'s New</string>
    <string name="start_at_gym">Start At Gym</string>
    <string name="search">Search</string>

</resources>