<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.member.AddMember">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:text="@string/tv_name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginStart="205dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/textfields2"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/tv_name"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="18sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="90dp"
        android:text="@string/tv_gender"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="205dp"
        android:layout_marginTop="90dp">

        <RadioButton
            android:id="@+id/rdbtn_male"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:checked="false"
            android:minHeight="48dp"
            android:onClick="radioButtonClick"
            android:text="@string/rdbtn_male"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rdbtn_female"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:minHeight="48dp"
            android:onClick="radioButtonClick"
            android:text="@string/rdbtn_female"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="163dp"
        android:text="@string/tv_age"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_age"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginStart="205dp"
        android:layout_marginTop="162dp"
        android:background="@drawable/textfields2"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/tv_age"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="18sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="234dp"
        android:text="@string/tv_address"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="190dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="205dp"
        android:layout_marginLeft="206dp"
        android:layout_marginTop="223dp"
        android:background="@drawable/textfields2"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/tv_address"
        android:inputType="textPostalAddress"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="18sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="310dp"
        android:text="@string/tv_phone"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginStart="205dp"
        android:layout_marginTop="299dp"
        android:background="@drawable/textfields2"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/tv_phone"
        android:inputType="phone"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="18sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="375dp"
        android:text="@string/tv_email"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginStart="205dp"
        android:layout_marginTop="363dp"
        android:background="@drawable/textfields2"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/et_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_nic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="430dp"
        android:text="@string/tv_nic"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_nic"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginStart="205dp"
        android:layout_marginTop="420dp"
        android:background="@drawable/textfields2"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/tv_nic"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="18sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Spinner
        android:id="@+id/membership"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginStart="205dp"
        android:layout_marginTop="479dp"
        android:background="@android:drawable/btn_dropdown"
        android:gravity="center_horizontal|center_vertical"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:spinnerMode="dropdown"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_membertype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="481dp"
        android:text="@string/tv_membertype"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="540dp"
        android:text="@string/tv_username"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginStart="205dp"
        android:layout_marginTop="540dp"
        android:background="@drawable/textfields2"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/tv_username"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="18sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="604dp"
        android:text="@string/tv_password"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginStart="205dp"
        android:layout_marginTop="600dp"
        android:background="@drawable/textfields2"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="18sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btn_addmember"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="653dp"
        android:background="@drawable/style"
        android:text="@string/btn_addmember"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="10dp"
        android:text="@string/btn_addmember"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

</RelativeLayout>
</ScrollView>