<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="211dp"
        android:padding="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:src="@mipmap/ic_launcher_round"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tv_userName"
            android:layout_width="137dp"
            android:layout_height="38dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="90dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_horizontal|center_vertical"
            android:text="TextView"
            android:textSize="26sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/textfields2"
                android:drawableLeft="@drawable/name"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/textfields2"
                android:drawableLeft="@drawable/age"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/tv_age"
                android:inputType="number" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/textfields2"
                android:drawableLeft="@drawable/address"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/tv_address"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/textfields2"
                android:drawableLeft="@drawable/phone"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/tv_phone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/textfields2"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/tv_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/nic"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/textfields2"
                android:drawableLeft="@drawable/nic"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/tv_nic"
                android:inputType="number" />

            <EditText
                android:id="@+id/memberType"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/textfields2"
                android:drawableLeft="@drawable/member"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/tv_membertype"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/textfields2"
                android:drawableLeft="@drawable/uname"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/tv_username"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/pwd"
                android:background="@drawable/textfields2"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/tv_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_updateProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_updatemember"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@drawable/style"/>

            <Button
                android:id="@+id/btn_cal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/btn_cal"
                android:textColor="@color/white"
                android:background="@drawable/style"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_changePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="97dp"
            android:layout_marginTop="68dp"
            android:background="@color/material_on_background_disabled"
            app:srcCompat="@drawable/cam" />

    </RelativeLayout>


</ScrollView>