<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.exercises.UpdateExercise">

    <TextView
        android:id="@+id/main_topic_item_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/main_topic_item_update"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/updateItem_topic"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="61dp"
        android:background="@drawable/textfields2"
        android:ems="10"
        android:hint="@string/enter_title"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="7dp"
        android:paddingEnd="7dp"
        android:textColor="#040404"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_item_topic_txt"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/updateItem_price"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="61dp"
        android:background="@drawable/textfields2"
        android:hint="@string/enter_sub_title"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="7dp"
        android:paddingEnd="7dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_item_price_txt"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/updateItem_description"
        android:layout_width="310dp"
        android:layout_height="130dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="61dp"
        android:background="@drawable/textfields2"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_description"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="7dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateitem_description_txt"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/update_item_topic_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="330dp"
        android:text="@string/title"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/update_item_price_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="299dp"
        android:text="@string/update_item_price_txt"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateItem_topic" />

    <TextView
        android:id="@+id/updateitem_description_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="280dp"
        android:text="@string/description"
        android:textColor="#040404"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateItem_price" />

    <ImageView
        android:id="@+id/updateitem_img"
        android:layout_width="170dp"
        android:layout_height="132dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="33dp"
        android:contentDescription="@string/exercise_image"
        app:layout_constraintEnd_toStartOf="@+id/updateitem_image_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateItem_description"
        tools:ignore="ImageContrastCheck"
        app:srcCompat="@drawable/ic_baseline_image_24"  />

    <Button
        android:id="@+id/updateitem_image_btn"
        android:layout_width="107dp"
        android:layout_height="36dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="60dp"
        android:background="@color/teal_700"
        android:text="@string/upload"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateItem_description"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/update_item_btn"
        android:layout_width="221dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/style"
        android:text="@string/update_item_btn"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateitem_img"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TextContrastCheck" />



</androidx.constraintlayout.widget.ConstraintLayout>